<resources>
    <string name="app_name">laba_number_4</string>
    <string name="no_files_found">NO FILES FOUND</string>
    <string name="this_is_an_icon_image">this is an icon image</string>
    <string name="documents">Documents</string>
    <string name="this_is_an_image">This is an image</string>
    <string name="no_description">No description</string>
    <string name="findText">Введите элемент для поиск</string>
    <string name="find">Найти</string>
    <string name="saveFile">Сохранение файла</string>
    <string name="saveImage">Сохранить</string>
    <string name="saveImageText">Сохранение фото</string>
    <string name="fileName">Название файла</string>
    <string name="fileTag">Тег файла</string>
    <string name="fileDesc">Описание файла</string>
</resources>