<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23F8CC"
    android:padding="10sp"
    tools:context=".SaveFileInfoActivity">
    
    <TextView
        android:id="@+id/saveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:text="@string/saveImageText"
        android:textSize="25sp"/>
    
    <EditText
        android:id="@+id/fileName"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_below="@+id/saveText"
        android:layout_marginTop="100sp"
        android:hint="@string/fileName"/>

    <EditText
        android:id="@+id/fileTag"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_below="@+id/fileName"
        android:layout_marginTop="10sp"
        android:hint="@string/fileTag"/>

    <EditText
        android:id="@+id/fileDesc"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_below="@+id/fileTag"
        android:layout_marginTop="10sp"
        android:hint="@string/fileDesc"/>
    
    <Button
        android:id="@+id/button"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:text="@string/saveImage"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fileDesc"
        android:layout_marginTop="40sp"
        android:textSize="20sp"/>

</RelativeLayout>